Unreleased

3.3.0
* NEW: Use libzim 9.3.0
* UPDATE: Upgrade many dependencies versions
* UPDATE: drop macOS12, add macOS15 in the CI
* UPDATE: drop ubuntu-20.04, add ubuntu-24.04 in the CI

3.2.3
* FIX: Module (finally) properly in ESM format

3.2.2
* FIX: Module properly in ESM format
* FIX: Upgrade version of node-gyp
* NEW: macOS14 in the CI

3.2.1
* NEW: Use libzim 9.2.1
* FIX: Module properly in ESM format
* FIX: Codecov in the CI

3.2.0:
* NEW: Use libzim v9.0.0
* NEW: Added mediaCount to Archive
* FIX: Simplify a lot the CI
* FIX: Nlob allocation and warning
* DEL: Deprecated getSize from SearchIterator

3.1.0:
* NEW: Use libzim v8.2.1
* FIX: Handling of binary data in the creator
* FIX: Use ESLint instead of TSLint
* REMOVE: Node.js 16 from the CI

3.0.0:
* NEW: Use libzim v8.2.0
* NEW: Calling API (to follow libzim changes)
* NEW: Add support of ARM(64) for both Linux and macOS
* UPDATE: Most of the dependencies
* UPDATE: Many improvements around the CI

2.4.4:
* NEW: Use libzim v6.3.2

2.4.3:
* NEW: Use libzim v6.3.0

2.4.2:
* NEW: Use libzim v6.2.2

2.4.1:
* NEW: Use libzim v6.2.1

2.4.0:
* NEW: Allow to specify compression (with zstd)
* NEW: Use libzim v6.1.8

2.3.0:
* NEW: Add support of macOS
* FIX: Remove useless files from the npm package

2.2.5:
* NEW: Use libzim v6.1.7

2.2.4:
* NEW: Use libzim v6.1.6

2.2.3:
* NEW: Use libzim v6.1.4

2.2.2:
* NEW: Use libzim v6.1.3

2.2.1:
* NEW: Use libzim v6.1.2

2.2.0
* FIX: Few problems around mime-types

2.1.1
* NEW: Ported to N-API

2.0.20
* NEW: Flavour ZIM metadata